tests/cheri-ci/expected/0320-invalid_function_declarators.error.c.expected
cheri-ci/0320-invalid_function_declarators.error.c:3:39: error: constraint violation: multiple declaration of 'x'
  int (*f)(int x, int (*g)(int x, int x));
                                      ^ 
ยง6.7#3: 
3   If an identifier has no linkage, there shall be no more than one declaration of the identifier
    (in a declarator or type specifier) with the same scope and in the same name space, except
    that:
    -- a typedef name may be redefined to denote the same type as it currently does,
       provided that type is not a variably modified type;
    -- tags may be redeclared as specified in 6.7.2.3.
